[Update] Added hardhat package for better tests

--- a/ethereum-bridge-contracts/tsconfig.json
+++ b/ethereum-bridge-contracts/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "dist"
   },
   "include": [
-    "./deploy", "./scripts", "./typechain"
+    "./deploy", "./scripts", "./typechain", "./test"
   ],
   "files": ["./hardhat.config.ts"],
 }
