--- a/ethereum-bridge-contracts/package.json
+++ b/ethereum-bridge-contracts/package.json
@@ -7,54 +7,41 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.7.2",
-    "@openzeppelin/test-helpers": "^0.5.15",
     "@polkadot/api": "^8.3.2",
-    "chai-as-promised": "^7.1.1",
-    "chai-bignumber": "^3.0.0",
     "dotenv": "^16.0.0",
-    "ethereumjs-abi": "^0.6.8",
-    "ethereumjs-util": "^7.1.4",
-    "ethers": "^5.7.1",
     "find-config": "^1.0.0",
     "lodash": "^4.17.21",
     "merkletreejs": "^0.2.18",
     "rlp": "^3.0.0",
     "secp256k1": "^4.0.2",
     "solc": "^0.8.13",
-    "solidity-bytes-utils": "^0.8.0",
     "solidity-docgen": "^0.5.17",
     "temp": "^0.9.1",
-    "unique-filename": "^1.1.1",
-    "web3-core-helpers": "^1.7.3",
-    "web3-core-promievent": "^1.7.3",
-    "web3-eth-abi": "^1.7.3",
-    "web3-utils": "^1.7.3"
+    "unique-filename": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@nomicfoundation/hardhat-chai-matchers": "1.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.2.0",
-    "@nomiclabs/hardhat-solhint": "^2.0.1",
-    "@nomiclabs/hardhat-truffle5": "^2.0.0",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "@typechain/web3-v1": "^6.0.1",
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.10.1",
-    "chai": "^4.3.4",
-    "hardhat": "^2.9.3",
-    "hardhat-deploy": "^0.11.18",
-    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.4.5",
+    "chai": "^4.2.0",
+    "ethers": "^6.4.0",
+    "hardhat": "^2.17.0",
+    "hardhat-deploy": "^0.11.34",
+    "hardhat-deploy-ethers": "^0.4.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solc-0.8": "npm:solc@^0.8.15",
-    "solidity-coverage": "^0.7.21",
+    "solidity-coverage": "^0.8.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
-    "typescript": "^4.7.4",
-    "web3": "^1.7.5"
+    "typescript": "^5.1.6"
   }
 }
