--- a/pallets/qa-tools/Cargo.toml
+++ b/pallets/qa-tools/Cargo.toml
@@ -40,11 +40,11 @@ std = [
     "order-book/std",
     "scale-info/std",
 ]
-ready-to-test = [
-    "framenode-chain-spec/ready-to-test",
-    "framenode-runtime/ready-to-test",
-    "common/ready-to-test",
-    "order-book/ready-to-test"
+wip = [
+    "framenode-chain-spec/wip",
+    "framenode-runtime/wip",
+    "common/wip",
+    "order-book/wip"
 ]
 private-net = [
     "framenode-chain-spec/private-net",
