--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -22,6 +22,7 @@ codec = { package = "parity-scale-codec", version = "3", features = [
     "chain-error",
 ] }
 clap = { version = "=4.3.17", features = ["derive"] }
+clap_lex = { version = "=0.5.0" }
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.61"
