--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -21,7 +21,8 @@ codec = { package = "parity-scale-codec", version = "3", features = [
     "derive",
     "chain-error",
 ] }
-clap = { version = "4.0.9", features = ["derive"] }
+clap = { version = "=4.3.17", features = ["derive"] }
+clap_lex = { version = "=0.5.0" }
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.61"
