--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -14,10 +14,12 @@ targets = ["x86_64-unknown-linux-gnu"]
 substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
+codec = { package = "parity-scale-codec", version = "=3.6.5", default-features = false, features = [
     "derive",
     "chain-error",
 ] }
+# Does not compile with newer version
+parity-scale-codec-derive = "=3.6.5"
 scale-info = { version = "2", default-features = false, features = ["derive"] }
 hex-literal = "0.3.1"
 log = { version = "0.4.14" }
