--- a/ethereum-bridge-contracts/slither.config.json
+++ b/ethereum-bridge-contracts/slither.config.json
@@ -1,4 +1,5 @@
 {
     "detectors_to_exclude": "too-many-digits, solc-version, reentrancy-events",
-    "filter_paths": "@openzeppelin"
+    "filter_paths": "@openzeppelin",
+    "json": "./slitherReport.json"
 }
